# MPI_Jacobi

./: .gitignore  CMakeLists.txt  Jacobi.cpp  Jacobi.h  baseline_data.cpp  baseline_data.h  main.cpp
Profiling/: prog.clog2  prog.slog2
